# audiorouter

./: Cargo.toml  PLAN.md  README.md  SPEC.md  build.rs
.github/workflows/: docs.yml  release.yml
assets/: config.toml  demo.tape  record-dashboard.py
crates/audiorouter-core/: Cargo.toml
crates/audiorouter-core/src/: api_types.rs  config.rs  device_inventory.rs  devices.rs  error.rs  lib.rs  monitor.rs  validate.rs
crates/audiorouter-dashboard/: Cargo.toml  build.rs
crates/audiorouter-dashboard-api/: Cargo.toml
crates/audiorouter-dashboard-api/src/: lib.rs  main.rs
crates/audiorouter-dashboard/dashboard/: .npmrc  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
crates/audiorouter-dashboard/dashboard/plugins/: api-server.ts  prerender-bundle.ts
crates/audiorouter-dashboard/dashboard/scripts/: dev.ts
crates/audiorouter-dashboard/dashboard/src/: App.tsx  index.css  main.tsx
crates/audiorouter-dashboard/dashboard/src/components/: FlowCanvas.tsx  RouteEdge.tsx  SidePanel.tsx  ValidationPanel.tsx  flow-types.ts
crates/audiorouter-dashboard/dashboard/src/lib/: format.ts  graph.ts
crates/audiorouter-dashboard/src/: lib.rs  main.rs
dashboard/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
dashboard/scripts/: dev.ts
dashboard/src/: App.tsx  index.css  types.ts
dashboard/src/components/: DeviceNode.tsx  EngineBar.tsx  LogPanel.tsx  RouteEdge.tsx  SidePanel.tsx  TomlPreview.tsx  ValidationPanel.tsx  flow-utils.ts  route-update-context.ts
dashboard/src/lib/: api.ts  toml.ts  validate.ts
docs/: book.toml
docs/src/: CNAME  SUMMARY.md  development.md  introduction.md
docs/src/.well-known/: ory-verify.txt
docs/src/guide/: completions.md  dashboard.md  installation.md  quick-start.md
docs/src/reference/: api-docs.md  cli.md  configuration.md  dashboard-api.md
docs/theme/: custom.css  head.hbs
scripts/: set-version.sh
src/: audio.rs  cli.rs  config.rs  devices.rs  engine_actor.rs  graph.rs  log_buffer.rs  main.rs  meter.rs  mixer.rs  tui.rs  ui.rs  validate.rs
