[package]
name = "audiorouter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = ">=1,<2"
clap = { version = ">=4,<5", features = ["derive"] }
colored = ">=3,<4"
cpal = ">=0.18,<0.19"
ctrlc = ">=3,<4"
dirs = ">=5,<7"
notify = ">=8,<9"
ringbuf = ">=0.5,<0.6"
serde = { version = ">=1,<2", features = ["derive"] }
toml = ">=1.1,<1.2"
ratatui = ">=0.30,<0.31"
crossterm = ">=0.29,<0.30"
tracing = ">=0.1,<0.2"
tracing-subscriber = { version = ">=0.3,<0.4", features = ["env-filter"] }
