[package]
name = "audiorouter"
version = "0.1.2"
edition = "2024"
description = "Cross-platform command-line audio router with a terminal UI"
license = "Apache-2.0"
repository = "https://github.com/gw31415/audiorouter"
readme = "README.md"
keywords = ["audio", "routing", "cpal", "tui", "mixer"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
anyhow = ">=1,<2"
clap = { version = ">=4,<5", features = ["derive"] }
clap_complete = ">=4,<5"
colored = ">=3,<4"
cpal = ">=0.18,<0.19"
ctrlc = ">=3,<4"
dirs = ">=6,<7"
notify = ">=8,<9"
ringbuf = ">=0.5,<0.6"
serde = { version = ">=1,<2", features = ["derive"] }
toml = ">=1.1,<1.2"
ratatui = ">=0.30,<0.31"
crossterm = ">=0.29,<0.30"
tracing = ">=0.1,<0.2"
tracing-subscriber = { version = ">=0.3,<0.4", features = ["env-filter"] }
unicode-width = ">=0.2,<0.3"
