[package]
name = "audiorouter-dashboard-api"
version = "0.1.2"
edition = "2024"
description = "HTTP/SSE dashboard API for audiorouter"
license = "Apache-2.0"
repository = "https://github.com/gw31415/audiorouter"

[dependencies]
anyhow = ">=1,<2"
audiorouter-core = { path = "../audiorouter-core" }
axum = { version = ">=0.8,<0.9" }
futures-util = ">=0.3,<0.4"
serde = { version = ">=1,<2", features = ["derive"] }
serde_json = ">=1,<2"
tokio = { version = ">=1,<2", features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-stream = { version = ">=0.1,<0.2", features = ["sync"] }
tower-http = { version = ">=0.6,<0.7", features = ["fs"] }
tracing = ">=0.1,<0.2"
