[package]
name = "audiorouter-dashboard"
version = "0.1.5"
edition = "2024"
description = "HTTP/SSE dashboard API and static-file host for audiorouter"
license = "Apache-2.0"
repository = "https://github.com/gw31415/audiorouter"
# Two bins exist (main + api-only); default to the full dashboard server so
# `cargo run --bin audiorouter-dashboard` and `cargo run -p audiorouter-dashboard`
# resolve without ambiguity.
default-run = "audiorouter-dashboard"

[dependencies]
anyhow = ">=1,<2"
audiorouter-core = { path = "../audiorouter-core", version = "=0.1.5" }
axum = { version = ">=0.8,<0.9" }
futures-util = ">=0.3,<0.4"
include_dir = ">=0.7,<0.8"
mime_guess = ">=2,<3"
serde = { version = ">=1,<2", features = ["derive"] }
serde_json = ">=1,<2"
tokio = { version = ">=1,<2", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = ">=0.1,<0.2", features = ["sync"] }
tracing = ">=0.1,<0.2"
